# good-eats

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
good_eats/: _version.py
good_eats/tests/: test_directories.py  test_pandas_fake_data.py  test_spark_fake_data.py  test_version.py
good_eats/tests/test_data/: fake_good_eats.csv
notebooks/: Initial-Exploration.ipynb
